<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:dialogTitle="@string/pref_units_label"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_entry_values"
        android:defaultValue="@string/pref_units_default" />

    <CheckBoxPreference
        android:key="@string/pref_notify_key"
        android:title="@string/pref_notify_label"
        android:defaultValue="@string/pref_notify_default" />

</PreferenceScreen>